@@ -27,6 +27,7 @@ import org.sakaiproject.assignment.api.model.Assignment;
 import org.sakaiproject.content.api.ContentHostingService;
 import org.sakaiproject.content.api.ContentResource;
 import org.sakaiproject.lessonbuildertool.service.LessonEntity;
+import org.sakaiproject.util.api.FormattedText;
 import org.sakaiproject.util.Validator;
 
 import lombok.Setter;
@@ -38,6 +39,7 @@ public class AssignmentExport {
     @Setter private AssignmentService assignmentService;
     @Setter private CCUtils ccUtils;
     @Setter private ContentHostingService contentHostingService;
+    @Setter private FormattedText formattedText;
 
     private List<CCAssignmentItem> getItemsInSite(String siteId) {
         List<CCAssignmentItem> list = new ArrayList<>();
@@ -140,7 +142,14 @@ public class AssignmentExport {
         switch (typeOfGrade) {
             case SCORE_GRADE_TYPE:
                 Integer scaleFactor = assignment.getScaleFactor() != null ? assignment.getScaleFactor() : assignmentService.getScaleFactor();
-                double maxPoints = new Double(assignmentService.getMaxPointGradeDisplay(scaleFactor, assignment.getMaxGradePoint()));
+                String aux = assignmentService.getMaxPointGradeDisplay(scaleFactor, assignment.getMaxGradePoint());
+                String decSeparator = formattedText.getDecimalSeparator();
+                double maxPoints = 0.0;
+                try {
+                    maxPoints = Double.valueOf(StringUtils.replace(aux, decSeparator, "."));
+                } catch (NumberFormatException e ) {
+                    log.error("Could not parse max points [{}] as a Double, {}", aux, e.getMessage());
+                }
                 ret.setMaxPoints(maxPoints);
                 ret.setForPoints(true);
             case LETTER_GRADE_TYPE:
